Fix right padding not showing on horizontal scroll

--- a/src/style.css
+++ b/src/style.css
@@ -261,7 +261,6 @@ body {
 
 #hours-preview .card-body {
   padding-block: 0;
-  padding-right: 0;
 }
 
 .hourly-weather-body {
@@ -275,6 +274,10 @@ body {
   -webkit-overflow-scrolling: touch; /* Für sanftes Scrollen auf iOS */
   scrollbar-width: thin; /* Dünne Scrollbar */
   scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* Farbe des Scrollbar-Daumen und Hintergrund */
+}
+
+.hourly-weather-body:last-child {
+  padding-right: 0;
 }
 
 /* Webkit-basierte Browser */
@@ -344,7 +347,6 @@ body {
 
 #daily-weather .card-body {
   padding-block: 0;
-  padding-right: 0;
 }
 
 .daily-weather-body {
@@ -358,6 +360,10 @@ body {
   -webkit-overflow-scrolling: touch; /* Für sanftes Scrollen auf iOS */
   scrollbar-width: thin; /* Dünne Scrollbar */
   scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* Farbe des Scrollbar-Daumen und Hintergrund */
+}
+
+.daily-weather-body:last-child {
+  padding-right: 0;
 }
 
 .daily-weather-body::-webkit-scrollbar {
